# strawberry-sqlmodel-alembic

./: .env.example  .flake8  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: db.py  graphql.py  main.py
app/models/: Artist.py  Song.py  __init__.py
app/schema/: __init__.py  mutation.py  query.py  types.py
migrations/: env.py
migrations/versions/: b32e3976f4bc_init.py
